--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,36 @@
+attrs==21.4.0
+certifi==2021.10.8
+chardet==3.0.4
+coverage==6.3
 Django==2.2.16
+django-debug-toolbar==2.2
+Faker==12.0.1
+flake8==4.0.1
+idna==2.8
+mccabe==0.6.1
 mixer==7.1.2
+more-itertools==8.12.0
+mypy==0.931
+mypy-extensions==0.4.3
+packaging==21.3
+pluggy==0.13.1
 Pillow==8.3.1
+py==1.11.0
+pycodestyle==2.8.0
+pyflakes==2.4.0
+pyparsing==3.0.7
 pytest==6.2.4
 pytest-django==4.4.0
 pytest-pythonpath==0.7.3
+python-dateutil==2.8.2
+pytils==0.3
+pytz==2021.3
 requests==2.26.0
 six==1.16.0
 sorl-thumbnail==12.7.0
+sqlparse==0.4.2
+text-unidecode==1.3
+tomli==2.0.0
+typing-extensions==4.0.1
+urllib3==1.25.11
+wcwidth==0.2.5
